--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 supervisely==6.1.59
 imgaug==0.4.0
 imagecorruptions==1.1.2
-albumentations==0.5.2
-mmcv==1.2.7
+#albumentations==0.5.2
+#mmcv==1.2.7
 # mmcv-full???
 #mmsegmentation==0.11.0
-mmcls==0.10.0
-torch==1.8.1
-torchvision==0.9.1
+#mmcls==0.10.0
+#torch==1.8.1
+#torchvision==0.9.1
+docstring-parser==0.7.3
