gen docstring - need fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 supervisely==6.1.59
 imgaug==0.4.0
 imagecorruptions==1.1.2
+
+# for docstring-to-html
+Sphinx==3.4.3
+sphinx-copybutton==0.3.1
+sphinx-rtd-theme==0.5.1
+beautifulsoup4==4.9.3
