--- a/src/debug.env
+++ b/src/debug.env
@@ -9,7 +9,11 @@ context.teamId=237
 context.workspaceId=311
 context.userId=1
 
-modal.state.slyProjectId=3578
+#demo images
+# modal.state.slyProjectId=3578
+
+# lemons augs debug with annotations (masks, polygons, boxes)
+modal.state.slyProjectId=3649
 
 SERVER_ADDRESS="put your value here"
 API_TOKEN="put your value here"
