--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
     "semantic segmentation",
     "instance segmentation",
     "classification",
-    "nn tools"
+    "nn tools",
+    "augmentation"
   ],
   "description": "Visualize and build augmentation pipeline with ImgAug",
   "docker_image": "supervisely/base-py-sdk:6.1.80",
