--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     "instance segmentation",
     "classification",
     "nn tools",
-    "augmentation"
+    "augmentation",
+    "data-operations"
   ],
   "description": "Visualize and build augmentation pipeline with ImgAug",
   "docker_image": "supervisely/base-py-sdk:6.23.1",
