--- a/config.json
+++ b/config.json
@@ -26,5 +26,5 @@
       "images_project"
     ]
   },
-  "poster": "https://i.imgur.com/biseFXX.png"
+  "poster": "https://user-images.githubusercontent.com/48245050/182815780-667460f6-b056-4e18-9d06-da5b7de01175.png"
 }
